karl/views/static/calendar.css
/* ... */
table.cal_all th {
  background-color: #e4e6e9;
  border-bottom: 1px solid #e4e6e9;
  padding: 3px 5px;
  text-align: left;
}
table.cal_all .actions {
  width: 100px;
  padding-right: 8px;
  text-align: right;
  vertical-align: top;
}
table.cal_all a,
table.cal_all a:visited,
table.cal_all .separator {
  color: #797979;
}
table.cal_all .color {
  width: 20px;
  vertical-align: top;
}
table.cal_all .name {
  width: 150px;
  vertical-align: top;
}
table.cal_all .location {
  width: 90px;
}
#calendar_path {
  width: 150px;
}
input.category_title, input.layer_title {
  width: 330px;
}
select.category_paths {
  width: 500px;
}
.cal_add input,
.cal_add select,
.cal_edit input,
.cal_edit select {
  margin-top: 2px;
}
.cal_choose_color {
  float: left;
  margin: 6px 0 10px 0;
  padding: 0;
  list-style: none;
}
.cal_choose_color li {
  float: left;
  margin: 0 5px 0 0;
  text-align: center;
}
.cal_choose_color li div {
  padding: 0 8px;
}
.cal_choose_color li input {
  margin: 0 0 3px 0;
  padding: 0;
  border: none;
  background: none;
}
.cal_add,
.cal_edit,
#setup_add_layer,
#setup_add_cal {
    margin-bottom: 35px;
}

/** =CALENDAR TOOLTIP
----------------------------------------------- */
.tooltip {
  display: none;
  font-size: 110%;
  height: 71px;
  width: 150px;
  padding: 5px;
  color: #333;
  z-index: 100;
  line-height: 1.2em;
}
.cal_month .tooltip {
  background: url("images/cal_tooltip_right.png") no-repeat;
}
.cal_week .cal_hour_event .tooltip {
  background: url("images/cal_tooltip_white.png") no-repeat;
}
.cal_week .tooltip {
  background: url("images/cal_tooltip_left.png") no-repeat;
}
.cal_week .cal_hour_event .tooltip {
  font-size: 95%;
}

.tooltip a {
  line-height: 1.2em;
}
.tooltip .cal_tool_time {
  font-weight: bold;
  margin-bottom: 2px;
}
.tooltip .cal_tool_loc {
  font-style: italic;
  color: #666;
}



/** =CALENDAR WIDE STYLES
----------------------------------------------- */


/** =CALENDAR WIDE GRID
----------------------------------------------- */
.karl-calendar-wide table.cal {
  /*width: 667px;*/ /*main diff: 231 */
  width: 898px;
}
.karl-calendar-wide table.cal_scroll {
  /*width: 646px;*/
  width: 877px;
}
/*
.karl-calendar-wide .cal_scroll th {
  width: 43px;
}
*/
/* all day */
/*
.karl-calendar-wide .cal .all_day th {
  width: 43px;
}
*/
/*
.karl-calendar-wide .cal .all_day .create {
  width: 15px;
}
*/
/* hours of the day */
.karl-calendar-wide .cal_hours_scroll {
  /*width: 665px;*/
  width: 896px;
}
/* current time */
.karl-calendar-wide .cal_time {
  /*width: 613px;*/
  width: 844px;
}
/* events */
/*
.karl-calendar-wide .cal_event_pos_right a {
  width: 92px;
}
*/
/* add new event */
/*
.karl-calendar-wide .cal_hour_event .create {
  width: 15px;
}
*/

/** =CALENDAR WIDE MONTH VIEW
----------------------------------------------- */
/* monthly */
/* diff: +33 */
.karl-calendar-wide .cal_month td {
  /*width: 93px;*/
  width: 126px;
}
.karl-calendar-wide .cal_month .cal_event a {
  /*width: 90px;*/
  width: 123px;
}
.karl-calendar-wide .cal_month .cal_event_pos_full a {
  /*width: 87px;*/
  width: 120px;
}
.karl-calendar-wide .cal_month .cal_event_pos_left a {
  /*width: 89px;*/
  width: 122px;
}
.karl-calendar-wide .cal_month .cal_event_pos_right a {
  /*width: 89px;*/
  width: 122px;
}

/** =CALENDAR WIDE WEEK VIEW
----------------------------------------------- */
/* +231 / 7 = 33 */
.karl-calendar-wide .cal_week td {
  /*width: 85px;*/
  width: 118px;
}
.karl-calendar-wide .cal_week .cal_event a {
  /*width: 84px;*/
  width: 117px;
}
.karl-calendar-wide .cal_week .cal_event_block {
  /*width: 79px;*/
  width: 112px;
}
.karl-calendar-wide .cal_week .last {
  width: 21px;
}

/** =CALENDAR WIDE DAY VIEW
----------------------------------------------- */
.karl-calendar-wide .cal_day .last {
  width: 21px;
}
.karl-calendar-wide .cal_day .cal_event a {
  /*width: 598px;*/
  width: 829px;
}
.karl-calendar-wide .cal_day .cal_event_block {
 /*width: 594px;*/
  width: 825px;
}


/** =CALENDAR WIDE AGENDA VIEW
----------------------------------------------- */
.karl-calendar-wide .cal_agenda .cal_agenda_day th {
  width: 80px;
}
.karl-calendar-wide .cal_agenda_time {
  width: 115px;
}

/** =CALENDAR WIDE SETUP
----------------------------------------------- */
/*
.karl-calendar-wide #calendar_setup dd {
    width: 425px;
}
.karl-calendar-wide p.cal_hint {
  width: 550px;
}
.karl-calendar-wide table.cal_all .color {
  width: 20px;
}
.karl-calendar-wide table.cal_all .name {
  width: 150px;
}
.karl-calendar-wide table.cal_all .location {
  width: 90px;
}
.karl-calendar-wide #calendar_path {
  width: 150px;
}
.karl-calendar-wide input.category_title, input.layer_title {
  width: 330px;
}
.karl-calendar-wide select.category_paths {
  width: 500px;
}
*/

/** =CALENDAR WIDE TOOLTIP
----------------------------------------------- */
/*
.karl-calendar-wide .tooltip {
  width: 150px;
}
*/



/** =CALENDAR HEADER (H1, SEARCH)
----------------------------------------------- */

.cal_search_header {
  margin-bottom: 25px;
  position: relative;
}
.cal_search_header h1 {
  font-weight: normal;
  margin-top: 0;
}
.cal_search_header form {
  float: right;
  width: 35em;
  text-align: right;
}
.cal_search_header form input {
  margin-right: 2px;
  font-size: 11px;
  display: inline;
  height: 19px;
  vertical-align: baseline;
}
.cal_search_header form .inp {
	width: 15em;
}

